# pscrape

./: .gitignore  README.md  proxy.py  push_pypi.sh  requirements.txt  setup.cfg
pscrape/: __init__.py  scraper.py
