[metadata]
name = pscrape
version = 0.0.2
author = lbirchler
description = Quickly generate a list of free and working proxies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lbirchler/pscrape
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >= 3.8
install_requires = 
    requests
    beautifulsoup4

[options.entry_points]
console_scripts = 
    pscrape = pscrape.scraper:main
